# mcp-browser-use

./: README.md  pyproject.toml
.github/workflows/: release.yml
src/browser_use_mcp/: server.py
src/mcp_browser_use/: server.py  utils.py
